--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
+    "cloudinary": "^1.41.1",
+    "formik": "^2.4.5",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4",
+    "react-toastify": "^9.1.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
